--- a/src/main/resources/arp/implementation/vertica-arp.yaml
+++ b/src/main/resources/arp/implementation/vertica-arp.yaml
@@ -26,8 +26,8 @@ syntax:
   identifier_length_limit: 128
   allows_boolean_literal: true
   map_boolean_literal_to_bit: false
-  supports_catalogs: false
-  supports_schemas: false
+  #supports_catalogs: false
+  #supports_schemas: false
 
 data_types:
   mappings:
